samples/_failures_safe/1761045401_a676a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f49a73c.c: In function ‘main’:
./samples/SAFE/__tmp_3f49a73c.c:132:5: error: expected expression at end of input
  132 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_3f49a73c.c:132:5: error: expected declaration or statement at end of input
